--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "buffer": "^5.2.1",
         "js-sha256": "^0.9.0",
         "strip-hex-prefix": "^1.0.0",
         "tronweb": "^2.3.8",
